--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.8",
+    "axios": "^1.7.3",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
